# moq

./: CLAUDE.md  Cargo.toml  deny.toml  flake.nix  justfile  package.json
.cargo/: config.toml
.github/workflows/: check.yml  release-brew.yml  release-go-ffi.yml  release-go.yml  release-kt-ffi.yml  release-kt-lib.yml  release-rs.yml  release-swift-ffi.yml  release-swift-lib.yml
cpp/obs/src/: moq-output.cpp  moq-source.cpp
demo/pub/: justfile
demo/web/src/: highlight.ts  index.ts  publish.html  publish.ts  stats.html  stats.ts  watch.html
doc/.vitepress/: config.ts
doc/concept/layer/: hang.md  moq-lite.md
doc/lib/: index.md
doc/lib/c/: index.md
doc/lib/go/: moq.md
doc/lib/js/@moq/: watch.md
doc/lib/kt/: index.md  moq.md
doc/lib/py/: moq-rs.md
doc/lib/rs/: index.md
doc/lib/rs/crate/: moq-mux.md  moq-token.md
doc/lib/rs/env/: native.md
doc/lib/swift/: index.md  moq.md
drafts/: CONTRIBUTING.md  draft-lcurley-moq-lite.md
go/: justfile
go/wrapper/moq/: errors.go  moq_test.go  publish.go  subscribe.go  types.go
js/: CLAUDE.md  justfile
js/hang/src/util/: index.ts
js/json/src/: compression.test.ts  consumer.ts  json.test.ts  producer.ts
js/moq-boy/src/: game.ts
js/msf/src/: catalog.ts
js/net/: package.json
js/net/src/: announced.ts  broadcast.test.ts  broadcast.ts  compression.test.ts  compression.ts  consume.ts  group.test.ts  group.ts  index.ts  integration.test.ts  path.test.ts  path.ts  track.test.ts  track.ts
js/net/src/connection/: accept.ts  browser.test.ts  browser.ts  connect.test.ts  connect.ts  established.ts  index.ts  reload.test.ts  reload.ts  transport.ts
js/net/src/ietf/: connection.ts  publisher.ts  subscriber.ts
js/net/src/lite/: announce.test.ts  announce.ts  connection.ts  fetch.test.ts  fetch.ts  publisher.test.ts  publisher.ts  setup.test.ts  subscribe.test.ts  subscribe.ts  subscriber.ts  track.test.ts  track.ts  version.ts
js/publish/src/: broadcast.ts  catalog.ts  element.ts  index.ts  preview.ts
js/publish/src/audio/: encoder.ts
js/publish/src/source/: camera.ts  device.ts  file.ts  microphone.ts  screen.ts
js/publish/src/support/: element.ts  index.ts
js/publish/src/ui/: element.ts
js/publish/src/video/: capture.ts  encoder.ts  index.ts
js/token/src/: claims.ts  cli.ts  interop.test.ts  key.test.ts  key.ts
js/wasm/: README.md
js/watch/: README.md
js/watch/src/: broadcast.ts  element.ts  index.ts  sync.ts
js/watch/src/audio/: decoder.ts  emitter.ts  source.ts  unlock.test.ts  unlock.ts
kt/: README.md  justfile
kt/moq/: build.gradle.kts
nix/: overlay.nix
py/: justfile
py/moq-rs/: README.md
py/moq-rs/moq/: __init__.py  publish.py  subscribe.py  types.py
py/moq-rs/tests/: test_local.py
rs/: CLAUDE.md  justfile
rs/hang/: Cargo.toml
rs/hang/examples/: subscribe.rs  video.rs
rs/hang/src/: error.rs
rs/kio/: Cargo.toml
rs/kio/src/: consumer.rs  waiter.rs
rs/libmoq/: CHANGELOG.md  Cargo.toml  README.md
rs/libmoq/src/: api.rs  audio.rs  consume.rs  error.rs  lib.rs  origin.rs  publish.rs  session.rs  state.rs  test.rs  video.rs
rs/moq-audio/: Cargo.toml
rs/moq-audio/src/: consumer.rs  producer.rs
rs/moq-bench/: Cargo.toml
rs/moq-bench/src/: connection.rs
rs/moq-boy/: Cargo.toml
rs/moq-boy/src/: input.rs  main.rs  status.rs  video.rs
rs/moq-cli/: Cargo.toml
rs/moq-cli/src/: args.rs  client.rs  hls.rs  main.rs  moq.rs  publish.rs  rtc.rs  server.rs  subscribe.rs  web.rs
rs/moq-ffi/: Cargo.toml
rs/moq-ffi/src/: consumer.rs  error.rs  media.rs  origin.rs  producer.rs  server.rs  session.rs  test.rs
rs/moq-flate/: Cargo.toml
rs/moq-gst/: Cargo.toml
rs/moq-hls/: Cargo.toml
rs/moq-hls/src/: error.rs  import.rs  lib.rs
rs/moq-json/: Cargo.toml
rs/moq-json/examples/: telemetry.rs
rs/moq-json/src/: lib.rs
rs/moq-loc/: Cargo.toml
rs/moq-loc/src/: lib.rs
rs/moq-msf/: CHANGELOG.md  Cargo.toml  README.md
rs/moq-msf/src/: lib.rs
rs/moq-mux/: CHANGELOG.md  Cargo.toml
rs/moq-mux/src/: error.rs  import.rs  source.rs  timeline.rs
rs/moq-native/: Cargo.toml
rs/moq-native/examples/: chat.rs  clock.rs
rs/moq-native/src/: client.rs  connect.rs  error.rs  iroh.rs  jemalloc.rs  lib.rs  log.rs  noq.rs  quic.rs  quiche.rs  quinn.rs  reconnect.rs  server.rs  tcp.rs  tls.rs  unix.rs  websocket.rs
rs/moq-native/tests/: backend.rs  broadcast.rs
rs/moq-net/: Cargo.toml
rs/moq-net/src/: client.rs  error.rs  lib.rs  path.rs  server.rs  session.rs  setup.rs  stats.rs  util.rs  version.rs
rs/moq-relay/: Cargo.toml
rs/moq-relay/src/: auth.rs  cache.rs  cluster.rs  config.rs  connection.rs  internal.rs  lib.rs  main.rs  stats.rs  web.rs  websocket.rs
rs/moq-relay/tests/: smoke.rs
rs/moq-rtc/: Cargo.toml
rs/moq-rtc/src/: egress.rs  error.rs  ingest.rs  lib.rs  session.rs
rs/moq-rtc/tests/: bitstream.rs
rs/moq-rtmp/: Cargo.toml  README.md
rs/moq-rtmp/src/: dial.rs  error.rs  flv.rs  lib.rs  listen.rs  server.rs
rs/moq-srt/: Cargo.toml  README.md
rs/moq-srt/src/: dial.rs  error.rs  lib.rs  listen.rs  server.rs  ts.rs
rs/moq-stats/: Cargo.toml
rs/moq-stats/src/: consume.rs  lib.rs  produce.rs
rs/moq-token/: Cargo.toml
rs/moq-token-cli/src/: main.rs
rs/moq-token/src/: claims.rs  error.rs  generate.rs  key.rs
rs/moq-transcode/: Cargo.toml
rs/moq-video/: CHANGELOG.md  Cargo.toml  DESIGN-native-codecs.md  README.md
rs/moq-video/src/: error.rs  frame.rs  lib.rs
rs/moq-video/src/capture/: avfoundation.rs  mediafoundation.rs  v4l2.rs
rs/moq-video/src/decode/: consumer.rs  decoder.rs  mod.rs
rs/moq-video/src/decode/backend/: mediafoundation.rs  mod.rs  openh264.rs  videotoolbox.rs
rs/moq-video/src/encode/: encoder.rs  mod.rs  producer.rs
rs/moq-video/src/encode/backend/: mediafoundation.rs  mod.rs  nvenc.rs  vaapi.rs  videotoolbox.rs
rs/moq-wasm/: Cargo.toml  README.md
rs/moq-wasm/src/: lib.rs
swift/: README.md  justfile
swift/Sources/Moq/: Aliases.swift  AsyncSequences.swift  Broadcast.swift  Dynamic.swift  Errors.swift  Track.swift
swift/Tests/MoqTests/: SmokeTests.swift
test/smoke/: smoke.sh
(+150 files in other folders)
