[package]
name = "moq-stats"
description = "Publish and consume MoQ traffic stats: drains a moq-net counter registry into JSON tracks, plain and compressed."
authors = ["Luke Curley <kixelated@gmail.com>"]
repository = "https://github.com/moq-dev/moq"
license = "MIT OR Apache-2.0"

version = "0.1.0"
edition = "2024"
rust-version.workspace = true

keywords = ["quic", "http3", "webtransport", "stats", "live"]
categories = ["multimedia", "network-programming", "web-programming"]

[dependencies]
moq-json = { workspace = true }
moq-net = { workspace = true }
serde = { workspace = true }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
web-async = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "test-util", "time"] }
