[package]
name = "moq-token"
description = "Media over QUIC - Token Generation and Validation"
authors = ["Luke Curley"]
repository = "https://github.com/moq-dev/moq"
license = "MIT OR Apache-2.0"

version = "0.6.3"
edition = "2024"
rust-version.workspace = true

[features]
jwks-loader = ["reqwest"]
tokio = ["dep:tokio"]

[dependencies]
aws-lc-rs = "1"
base64 = "0.22"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
p256 = "0.14.0"
p384 = "0.14.0"
reqwest = { version = "0.13", default-features = false, features = ["rustls"], optional = true }
rsa = "0.9.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["base64"] }
thiserror = "2"
tokio = { version = "1", features = ["fs"], optional = true }

[dev-dependencies]
anyhow = "1"
