[package]
name = "moq-video"
description = "Native video capture/encoding/decoding for Media over QUIC"
authors = ["Luke Curley <kixelated@gmail.com>"]
repository = "https://github.com/moq-dev/moq"
license = "MIT OR Apache-2.0"

version = "0.0.4"
edition = "2024"
rust-version.workspace = true
# Not publishable to crates.io until `moq-vaapi` (the `vaapi` feature's dep) is
# published; it's an in-workspace path dependency for now. Flip back then.
publish = false

keywords = ["quic", "http3", "webtransport", "media", "video"]
categories = ["multimedia", "multimedia::video", "multimedia::encoding"]

[lib]
doctest = false

[features]
# NVIDIA NVENC hardware encoder (Linux). Off by default; enable for a build that
# should use NVENC where present. Everything is dlopen'd at runtime: cudarc loads
# CUDA, and nvidia-video-codec-sdk's `dynamic-loading` (a fork feature, see the
# root [patch.crates-io]) loads libnvidia-encode. So an nvenc-enabled binary still
# links on a GPU-less builder and still starts on machines without the NVIDIA
# driver, falling back to software (see backend::open). `cuda-12020` pins the CUDA
# API version so the build needs no CUDA toolkit.
nvenc = ["dep:nvidia-video-codec-sdk", "nvidia-video-codec-sdk/dynamic-loading", "cudarc/fallback-dynamic-loading", "cudarc/cuda-12020"]
# Intel/AMD VAAPI hardware encoder (Linux). Off by default; enable for a build
# that should use VAAPI where present. The `moq-vaapi` crate (moq-dev/vaapi) builds
# against its own vendored libva headers and dlopen's libva at runtime, so a
# vaapi-enabled binary builds without system libva-dev, links on a libva-less
# builder, and still loads on machines without libva, falling back to software
# (see backend::open).
vaapi = ["dep:moq-vaapi"]

[dependencies]
anyhow = "1"
bytes = "1"
cudarc = { version = "0.19", optional = true, default-features = false, features = ["driver"] }
# Catalog types (VideoConfig / VideoCodec) the decode consumer reads.
hang = { workspace = true }
moq-mux = { workspace = true }
moq-net = { workspace = true }
# VAAPI H.264 encoder, gated behind the `vaapi` feature + a linux cfg. Listed here
# (not under a target table) so the feature can reference it on any host; the code
# that uses it is `cfg(target_os = "linux")` and it only builds when `vaapi` is
# enabled (which only happens on Linux, where libva headers exist).
moq-vaapi = { workspace = true, optional = true }
# NVENC backend, gated behind the `nvenc` feature + a linux cfg. Listed here
# (not under a target table) so the feature can reference it on any host; the
# code that uses it is `cfg(target_os = "linux")`.
nvidia-video-codec-sdk = { version = "0.4", optional = true }
# Vendored, statically-linked software H.264 fallback (no system dependency).
openh264 = "0.9.3"
thiserror = "2"
tokio = { workspace = true, features = ["rt", "macros"] }
tracing = "0.1"
# RGBA -> I420 color conversion (replaces ffmpeg swscale).
yuv = "0.8.14"

[target.'cfg(target_os="linux")'.dependencies]
# Native V4L2 webcam capture (replaces nokhwa). `v4l` streams MMAP buffers;
# MJPEG cameras are decoded with the pure-Rust `zune-jpeg` (no libjpeg/IJG).
v4l = "0.14"
zune-jpeg = "0.5"

[target.'cfg(target_os="macos")'.dependencies]
block2 = "0.6.2"
dispatch2 = "0.3.1"
objc2 = "0.6.4"
objc2-av-foundation = "0.3.2"
objc2-core-foundation = "0.3.2"
objc2-core-media = "0.3.2"
objc2-core-video = "0.3.2"
objc2-foundation = "0.3.2"
objc2-screen-capture-kit = "0.3.2"
objc2-video-toolbox = "0.3.2"

[target.'cfg(target_os="windows")'.dependencies]
# Native Media Foundation webcam capture + hardware H.264 encode (replaces
# nokhwa). An `IMFSourceReader` backed by a D3D11 device hands us NV12 textures
# that feed a hardware encoder MFT zero-copy; without a GPU it falls back to CPU
# NV12 deinterleaved to I420 for openh264. Links only system import libs, no
# vendor SDK. The Direct3D11 / Dxgi features cover the shared D3D11 device and
# the `IMFDXGIBuffer` surfaces wrapping each captured texture.
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Media_MediaFoundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D10",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_Ole",
    "Win32_System_Variant",
] }
