[package]
name = "moq-video"
description = "Native video capture/encoding/decoding for Media over QUIC"
authors = ["Luke Curley <kixelated@gmail.com>"]
repository = "https://github.com/moq-dev/moq"
license = "MIT OR Apache-2.0"

version = "0.0.6"
edition = "2024"
rust-version.workspace = true

keywords = ["quic", "http3", "webtransport", "media", "video"]
categories = ["multimedia", "multimedia::video", "multimedia::encoding"]

[features]
# Hardware codecs are enabled by default. Disable them (e.g. `--no-default-features`)
# for a slimmer self-compiled Linux build that drops the CUDA / libva deps: openh264
# stays as the always-compiled software fallback and V4L2 capture is unaffected. All
# three features are no-ops off Linux (their deps are Linux-only).
default = ["nvenc", "vaapi", "nvdec"]
# NVIDIA NVENC hardware encoder (Linux). dlopen'd at runtime (cudarc + moq-nvenc,
# which loads libnvidia-encode), with a libloading probe for the driver libs, so
# an nvenc build still links GPU-less and starts driverless, falling back to the
# next encoder.
nvenc = ["dep:cudarc", "dep:moq-nvenc", "dep:libloading"]
# NVIDIA NVDEC hardware decoder (Linux). Same runtime story as `nvenc`: cudarc
# loads libcuda and moq-nvenc's cuvid table loads libnvcuvid, so an nvdec build
# links GPU-less and starts driverless, falling back to the next decoder. Decoded
# frames stay in CUDA memory and feed NVENC zero-copy (the transcode path).
nvdec = ["dep:cudarc", "dep:moq-nvenc", "dep:libloading"]
# Intel/AMD VAAPI hardware encoder (Linux). moq-vaapi 0.0.2 hard-links libva (the
# binary carries NEEDED libva.so.2 / libva-drm.so.2), so disable this feature for a
# build with no libva dependency. See #1837.
vaapi = ["dep:moq-vaapi"]
# Screen capture on Linux via xdg-desktop-portal + PipeWire (Wayland and X11).
# Off by default because the `pipewire` crate links libpipewire-0.3 via pkg-config
# at build time (and its bindgen needs libclang), so it only belongs in builds
# that actually capture displays. Camera capture (V4L2) needs nothing extra.
pipewire = ["dep:pipewire", "dep:ashpd"]

[dependencies]
anyhow = "1"
bytes = "1"
# CPU I420 resize (SIMD per-plane convolution), the software half of
# decode::Frame::resize; CUDA frames resize on the GPU instead.
fast_image_resize = "5"
# Catalog types (VideoConfig / VideoCodec) the decode consumer reads.
hang = { workspace = true }
moq-mux = { workspace = true }
moq-net = { workspace = true }
# Vendored, statically-linked software H.264 fallback (no system dependency).
# Always compiled in: hardware encoders (VideoToolbox / Media Foundation /
# NVENC / VAAPI) are preferred, but openh264 is the fallback when none is usable
# (GPU-less box, or a resolution a hardware encoder rejects).
openh264 = "0.9.3"
# For the raw `ENCODER_OPTION_BITRATE` set_option: openh264 takes a bitrate only
# at construction and re-exports none of the sys types needed to retune a live
# encoder. `default-features = false` because openh264 already turns on the
# features it needs; cargo unifies this on the same version it depends on, so the
# raw API types stay identical.
openh264-sys2 = { version = "0.9.6", default-features = false }
thiserror = "2"
tokio = { workspace = true, features = ["rt", "macros", "sync", "time"] }
tracing = "0.1"
# RGBA -> I420 color conversion (replaces ffmpeg swscale).
yuv = "0.8.14"

[target.'cfg(target_os="linux")'.dependencies]
# xdg-desktop-portal ScreenCast negotiation for the `pipewire` feature (pure Rust,
# zbus over DBus). The portal owns source selection: the user picks a monitor in a
# compositor dialog, and we get back a PipeWire fd + node id to stream from.
ashpd = { version = "0.13", optional = true, default-features = false, features = ["tokio", "screencast"] }
# NVENC hardware encoder, behind the default-on `nvenc` feature. Everything is
# dlopen'd at runtime: cudarc loads CUDA, and moq-nvenc (an in-tree fork of
# nvidia-video-codec-sdk, see rs/moq-nvenc) loads libnvidia-encode. So the binary
# links on a GPU-less builder and still starts on machines without the NVIDIA
# driver, falling back to the next encoder (see backend::open). `cuda-12020` pins
# the CUDA API version so the build needs no CUDA toolkit.
# The `nvrtc` feature only unlocks the `Ptx` type and `load_module` (both free of
# extra dependencies); libnvrtc itself is never loaded since we ship pre-built PTX
# (see frame/nv12_resize.ptx) that the driver JIT-compiles.
cudarc = { version = "0.19", optional = true, default-features = false, features = ["driver", "fallback-dynamic-loading", "cuda-12020", "nvrtc"] }
# Probe for the NVIDIA driver libraries before calling cudarc / the NVENC SDK,
# which panic (process-abort under release `panic = "abort"`) if their library is
# absent. Lets a GPU-less host fall back to the next encoder instead of crashing.
libloading = { version = "0.8", optional = true }
moq-nvenc = { workspace = true, optional = true }
# Intel/AMD VAAPI hardware encoder, behind the default-on `vaapi` feature. As of
# moq-vaapi 0.0.2 libva is dynamically linked via pkg-config (the binary carries
# NEEDED libva.so.2 / libva-drm.so.2), so an enabled-vaapi Linux build needs libva
# at build time and the binary needs it at runtime: a libva-less host fails to load
# rather than falling back. Disable the `vaapi` feature for a libva-free build, or
# switch moq-vaapi to dlopen libva (one portable binary that falls back like the
# NVENC backend); the latter is tracked in #1837.
moq-vaapi = { workspace = true, optional = true }
# PipeWire video stream for the portal's node, behind the `pipewire` feature.
# Links libpipewire-0.3 via pkg-config at build time; bindgen needs libclang.
pipewire = { version = "0.10", optional = true }
# Native V4L2 webcam capture (replaces nokhwa). `v4l` streams MMAP buffers;
# MJPEG cameras are decoded with the pure-Rust `zune-jpeg` (no libjpeg/IJG).
v4l = "0.14"
zune-jpeg = "0.5"

[target.'cfg(target_os="macos")'.dependencies]
block2 = "0.6.2"
dispatch2 = "0.3.1"
objc2 = "0.6.4"
objc2-av-foundation = "0.3.2"
objc2-core-foundation = "0.3.2"
objc2-core-graphics = { version = "0.3.2", features = ["CGDirectDisplay"] }
objc2-core-media = "0.3.2"
objc2-core-video = "0.3.2"
objc2-foundation = "0.3.2"
objc2-screen-capture-kit = "0.3.2"
objc2-video-toolbox = "0.3.2"

[target.'cfg(target_os="windows")'.dependencies]
# Native Media Foundation webcam capture + hardware H.264 encode (replaces
# nokhwa). An `IMFSourceReader` backed by a D3D11 device hands us NV12 textures
# that feed a hardware encoder MFT zero-copy; without a GPU it falls back to CPU
# NV12 deinterleaved to I420 for openh264. Links only system import libs, no
# vendor SDK. The Direct3D11 / Dxgi features cover the shared D3D11 device and
# the `IMFDXGIBuffer` surfaces wrapping each captured texture.
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Media_MediaFoundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D10",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_Ole",
    "Win32_System_Variant",
] }
